Updates to final figures

--- a/Aim1/code/Python/AWS/landscape_metrics-aws2.ipynb
+++ b/Aim1/code/Python/AWS/landscape_metrics-aws2.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8cc665fd-f63f-446f-8292-fba295474c11",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "pip install ipywidgets --upgrade"
+    "!pip install pylandstats"
    ]
   },
   {
@@ -22,8 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim1/code/Python/AWS\n",
-      "85\n",
+      "/home/jovyan\n",
       "Success ...\n"
      ]
     }
@@ -36,10 +37,8 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import rioxarray as rxr\n",
-    "import matplotlib.pyplot as plt\n",
     "import time\n",
     "import logging\n",
-    "from tqdm.notebook import tqdm\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -49,33 +48,27 @@
     "\n",
     "proj = 'EPSG:5070'\n",
     "\n",
-    "projdir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim1/data/'\n",
-    "\n",
     "#################\n",
     "# Load the data #\n",
     "#################\n",
     "\n",
-    "# Spatial blocks\n",
-    "blocks_path = os.path.join(projdir,'spatial/mod/boundaries/spatial_block_grid_50km2_count_s2.gpkg')\n",
-    "blocks = gpd.read_file(blocks_path).to_crs(proj)\n",
-    "blocks['s2aspen_sum'] = blocks['s2aspen_sum'].astype(int)\n",
-    "blocks = blocks[blocks['s2aspen_sum'] > 100000]  # at least 10 hectares\n",
-    "block_ids = list(blocks.id)\n",
-    "print(len(block_ids))\n",
+    "# # Spatial blocks\n",
+    "# blocks_path = os.path.join(projdir,'spatial/mod/boundaries/spatial_block_grid_50km2_count_s2.gpkg')\n",
+    "# blocks = gpd.read_file(blocks_path).to_crs(proj)\n",
+    "# blocks['s2aspen_sum'] = blocks['s2aspen_sum'].astype(int)\n",
+    "# blocks = blocks[blocks['s2aspen_sum'] > 100000]  # at least 10 hectares\n",
+    "# block_ids = list(blocks.id)\n",
+    "# print(len(block_ids))\n",
     "\n",
-    "# White River NF boundary\n",
-    "wrnf_path = os.path.join(projdir,'spatial/raw/boundaries/wrnf_boundary_srme.gpkg')\n",
+    "# # White River NF boundary\n",
+    "# wrnf_path = os.path.join(projdir,'spatial/raw/boundaries/wrnf_boundary_srme.gpkg')\n",
     "\n",
     "# Target grids (resampled to 10-meter where necessary)\n",
     "tifs = [\n",
-    "    os.path.join(projdir,'spatial/mod/results/classification/s2aspen_prob_10m_binOpt_srme.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/results/classification/s2aspen_prob_10m_binOpt_wrnf.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/lc16_evt_200_bin_srme_10m.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/lc16_evt_200_bin_wrnf_10m.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/usfs_treemap16_balive_int_bin_srme_10m.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/usfs_treemap16_balive_int_bin_wrnf_10m.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/usfs_itsp_aspen_ba_gt10_srme_10m.tif'),\n",
-    "    os.path.join(projdir,'spatial/mod/reference/usfs_itsp_aspen_ba_gt10_wrnf_10m.tif')\n",
+    "    's2aspen_prob_10m_binOpt_wrnf.tif',\n",
+    "    'lc16_evt_200_bin_wrnf_10m.tif',\n",
+    "    'usfs_treemap16_balive_int_bin_wrnf_10m.tif',\n",
+    "    'usfs_itsp_aspen_ba_gt10_wrnf_10m.tif'\n",
     "]\n",
     "\n",
     "print(\"Success ...\")"
@@ -85,7 +78,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a87aa995-cb15-4327-b9f0-5ddf28ed1f9d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -150,24 +145,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "64b6a145-cf8b-4a96-9221-710ecbff81dc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Processing by spatial block for the Southern Rockies ...\n",
-      "['s2aspen_prob_10m_binOpt_srme', 'lc16_evt_200_bin_srme_10m', 'usfs_treemap16_balive_int_bin_srme_10m', 'usfs_itsp_aspen_ba_gt10_srme_10m']\n",
-      "Starting: s2aspen_prob_10m_binOpt_srme\n",
-      "Starting: lc16_evt_200_bin_srme_10m\n",
-      "Starting: usfs_treemap16_balive_int_bin_srme_10m\n",
-      "Starting: usfs_itsp_aspen_ba_gt10_srme_10m\n",
+      "[]\n",
       "Processing for the White River NF ...\n",
       "['s2aspen_prob_10m_binOpt_wrnf', 'lc16_evt_200_bin_wrnf_10m', 'usfs_treemap16_balive_int_bin_wrnf_10m', 'usfs_itsp_aspen_ba_gt10_wrnf_10m']\n",
       "Starting: s2aspen_prob_10m_binOpt_wrnf\n",
-      "NoData value: None\n"
+      "['s2aspen_prob_10m_binOpt_wrnf', 'lc16_evt_200_bin_wrnf_10m', 'usfs_treemap16_balive_int_bin_wrnf_10m', 'usfs_itsp_aspen_ba_gt10_wrnf_10m']\n",
+      "Starting: lc16_evt_200_bin_wrnf_10m\n",
+      "['s2aspen_prob_10m_binOpt_wrnf', 'lc16_evt_200_bin_wrnf_10m', 'usfs_treemap16_balive_int_bin_wrnf_10m', 'usfs_itsp_aspen_ba_gt10_wrnf_10m']\n",
+      "Starting: usfs_treemap16_balive_int_bin_wrnf_10m\n",
+      "['s2aspen_prob_10m_binOpt_wrnf', 'lc16_evt_200_bin_wrnf_10m', 'usfs_treemap16_balive_int_bin_wrnf_10m', 'usfs_itsp_aspen_ba_gt10_wrnf_10m']\n",
+      "Starting: usfs_itsp_aspen_ba_gt10_wrnf_10m\n",
+      "NoData value: None\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Total elapsed time: 10.253333333333334 minutes.\n"
      ]
     }
    ],
@@ -182,7 +183,7 @@
     "\n",
     "start = time.time()\n",
     "\n",
-    "out_dir = os.path.join(projdir,'tabular/mod/results/ls_metrics/')\n",
+    "# out_dir = os.path.join(projdir,'tabular/mod/results/ls_metrics/')\n",
     "\n",
     "for region in rois:\n",
     "\n",
@@ -200,7 +201,7 @@
     "            print(f\"Starting: {source_name}\")\n",
     "            \n",
     "            # Check if the file exists, if not, proceed\n",
-    "            if not os.path.exists(os.path.join(out_dir,f'ls_metrics_patch_{source_name}.csv')):\n",
+    "            if not os.path.exists(f'ls_metrics_patch_{source_name}.csv'):\n",
     "\n",
     "                start_tif = time.time()\n",
     "                \n",
@@ -266,7 +267,7 @@
     "            print(f\"Starting: {source_name}\")\n",
     "            \n",
     "            # Check if the file exists, if not, proceed\n",
-    "            if not os.path.exists(os.path.join(out_dir,f'ls_metrics_patch_{source_name}.csv')):\n",
+    "            if not os.path.exists(f'ls_metrics_patch_{source_name}.csv'):\n",
     "                # Open the image file\n",
     "                img = rxr.open_rasterio(tif_path, masked=True, cache=False).squeeze()\n",
     "                img = img.fillna(0)\n",
@@ -278,8 +279,8 @@
     "                # Compute the landscape metrics\n",
     "                patch_results, class_results = compute_ls_metrics(ls, source_name, region)\n",
     "        \n",
-    "                patch_results.to_csv(os.path.join(out_dir,f'ls_metrics_patch_{source_name}.csv'))\n",
-    "                class_results.to_csv(os.path.join(out_dir,f'ls_metrics_class_{source_name}.csv'))\n",
+    "                patch_results.to_csv(f'ls_metrics_patch_{source_name}.csv')\n",
+    "                class_results.to_csv(f'ls_metrics_class_{source_name}.csv')\n",
     "        \n",
     "                del img, ls, patch_results, class_results\n",
     "    \n",
@@ -292,9 +293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Aim1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "aim1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
