--- a/Aim1/code/R/Figures.Rmd
+++ b/Aim1/code/R/Figures.Rmd
@@ -19,7 +19,7 @@ ggplot() +
   theme_light(11)
 ```
 
-# Spectral Response and Phenological Characteristics
+# Spectral Response 
 
 Load the Sentinel-2 annual time-series (2019). 
 
@@ -83,6 +83,7 @@ Now pivot the table longer:
 
 ```{r}
 
+# Create a longer data frame
 tsp_ <- tsp %>%
   select(c(starts_with("B"),image_date,
            SLAVI,NDVI705,NDMI,ChlRE,IRECI,MCARI)) %>%
@@ -139,48 +140,6 @@ rm(df, df.ts, result, bp.ind, bp.dates)
 ```
 
 Perform the analysis by spatial block grid to get an idea of the variation in time-series breakpoints.
-
-```{r}
-results <- list()
-
-for(block in unique(df$block_id)) {
-    # Subset data for the block
-    block_data <- df %>% filter(block_id == block)
-
-    # Create time series (assuming weekly aggregation)
-    block_ts <- ts(block_data$reflectance, frequency=52)
-
-    # Perform breakpoint analysis
-    block_result <- changepoint::cpt.meanvar(block_ts, method="PELT")
-
-    # Store results with block identifier
-    results[[block]] <- changepoint::cpts(block_result)
-}
-
-# Create an empty data frame to store breakpoint information
-breakpoint_data <- data.frame(block_id = character(), breakpoint_week = integer())
-
-# Loop through each block and add its breakpoints to the data frame
-for(block in names(results)) {
-    block_breakpoints <- results[[block]]
-    block_data <- data.frame(block_id = rep(block, length(block_breakpoints)), 
-                             breakpoint_week = block_breakpoints)
-    breakpoint_data <- rbind(breakpoint_data, block_data)
-}
-
-# Convert the 'breakpoint_week' to actual dates
-# This conversion depends on your specific date arrangement. Here's a basic example:
-start_date <- as.Date("2019-01-02")  # Replace with your dataset's start date
-breakpoint_data$breakpoint_date <- start_date + (breakpoint_data$breakpoint_week - 1) * 7
-
-ggplot(breakpoint_data, aes(x = breakpoint_date, y = block_id, group = block_id)) +
-    geom_line() +  # Optionally connect breakpoints in each block
-    geom_point(size = 3) +  # Breakpoint markers
-    theme_minimal() +
-    labs(x = "Date", y = "Spatial Block") +
-    theme(panel.grid.major.y = element_blank(),  # Removes horizontal grid lines
-          panel.grid.minor.y = element_blank())
-```
 
 Plot of median daily observations:
 
@@ -462,7 +421,7 @@ head(opt_thresh)
 
 ```
 
-## Figure 4AB. Classification Scenarios
+## Figure 3: Classification Scenarios
 
 ```{r fig.width=6.5, fig.height=3.5, message=F, warning=F}
 
@@ -496,7 +455,7 @@ ggplot(data=scenarios, aes(x=reorder(Feature_Set,F1),y=F1)) +
 
 # Calculating the means and standard errors for F1-scores
 # Plot as a bar chart with standard errors
-f4a <- scenarios %>%
+f3a <- scenarios %>%
   group_by(Feature_Set) %>%
   summarise(
     Mean = mean(F1),
@@ -518,10 +477,10 @@ f4a <- scenarios %>%
       axis.text.x = element_text(angle = 45, hjust=1),
       text = element_text(family = "Arial")
     )
-f4a
+f3a
 
 # Save out
-ggsave(f4a, file = "../../figures/Figure4A_Class_Scenarios.png",
+ggsave(f3a, file = "../../figures/Figure4A_Class_Scenarios.png",
        dpi = 300, bg="white") # adjust dpi accordingly
 
 ```
@@ -535,8 +494,8 @@ final_model <- opt_thresh %>%
   rename(F1 = f1) %>%
   select(Feature_Set,F1)
 
+# Add the final model to the data frame
 scenarios_ <- bind_rows(scenarios,final_model)
-head(scenarios_)
 
 # Create the final table
 df <- scenarios_ %>%
@@ -555,8 +514,6 @@ df <- scenarios_ %>%
     n_features = if_else(Feature_Set == "Combined_S1_S2", 55, n_features),
     n_features = if_else(Feature_Set == "Final_Model", 17, n_features)
   )
-
-head(df,12)
 
 # Create a tidy table
 
@@ -578,27 +535,29 @@ ft <- flextable::flextable(cleaned) %>%
   flextable::autofit() %>% 
   flextable::fit_to_width(7.5)
 ft
-print(ft, preview = "docx")
+# print(ft, preview = "docx")
 
-# rm(scenarios,df)
+rm(scenarios_,df,ft,fontname,cleaned)
 ```
 
-## Figure 4CD. Accuracy Assessment of the Best Performing Model
+## Figure S2. Model Performance Metrics; AUC-PR, Optimum Cutoff
+
+This will go into the supplement.
 
 The optimum cutoff value for classification is defined as the average cutoff across folds at which the F1-score is maximized. We can see the optimum cutoff value and how it corresponds with F1-score and the AUC-PR curve.
 
-```{r warning=F, fig.width=3, fig.height=3}
+```{r warning=F, fig.width=6.5, fig.height=3}
 paste0("Optimum cutoff for classification: ",round((opt_cutoff <- mean(opt_thresh$cutoff_f1)),3))
 paste0("Average F1-score: ",round((f1max <- max(opt_thresh$f1)),3))
 
 # AUC-PR Curve (approximation)
 
-ggplot(data=accmeas) +
+fs2a <- ggplot(data=accmeas) +
   geom_line(aes(x=fpr,y=tpr,color=factor(model)),linewidth=0.4) +
   scale_color_viridis_d(option="turbo") +
   scale_x_continuous(limits=c(0,1)) +  # Set x axis limits from 0 to 1
   scale_y_continuous(limits=c(0,1)) +
-  labs(x='False Positive Rate', y='True Positive Rate') +
+  labs(x='False Positive Rate', y='True Positive Rate', tag="A") +
   coord_fixed(ratio = 1) +  # to keep the x and y axes scales same
   geom_abline(intercept = 0, slope = 1, linetype = "dashed", color = "black") +  # diagonal
   theme_light() +
@@ -610,18 +569,18 @@ ggplot(data=accmeas) +
         axis.text = element_text(size=10),
         strip.text.x = element_text(size = 11))
 
-f5b <- ggplot(data=accmeas) +
+fs2b <- ggplot(data=accmeas) +
   geom_line(aes(x=cutoff,y=f1,color=factor(model)),linewidth=0.4) +
   scale_color_viridis_d(option="turbo") +
   # geom_vline(xintercept=0.50, linetype="dashed", color="black") +
   geom_point(aes(x=opt_cutoff, y=f1max),
              color = "black", size = 3, shape = 19) +
-  geom_text(aes(x=opt_cutoff, y=f1max),
-            label = paste0('Optimal threshold: ', round(opt_cutoff,3)),
-            nudge_x = 0.0, nudge_y = 0.08, size = 3.5) +
   scale_x_continuous(limits=c(0,1)) +  # Set x axis limits from 0 to 1
   scale_y_continuous(limits=c(0,1)) +
-  labs(x='CLassification Threshold', y='F1 Score') +
+  labs(x='Classification Threshold', y='F1 Score', tag="B") +
+  geom_text(aes(x=opt_cutoff, y=f1max),
+            label = paste0('Optimal threshold: ', round(opt_cutoff,3)),
+            nudge_x = 0.0, nudge_y = 0.05, size = 3.5) +
   coord_fixed(ratio = 1) +  # to keep the x and y axes scales same
   theme_light() +
   theme(legend.position = "none",
@@ -631,11 +590,15 @@ f5b <- ggplot(data=accmeas) +
                                     margin = unit(c(0.4,0,0,0), "cm")),
         axis.text = element_text(size=10),
         strip.text.x = element_text(size = 11))
-f5b
+
+# Arrange
+(fs2 <- ggarrange(fs2a,fs2b))
 
 # Save out
-ggsave(f4a, file = "../../figures/Figure4A_Class_Scenarios.png",
+ggsave(fs2, file = "../../figures/FigureS2_Model_Performance.png",
        dpi = 300, bg="white") # adjust dpi accordingly
+
+rm(fs2a,fs2b,fs2)
 
 ```
 
@@ -1394,7 +1357,195 @@ rm(a,aa,b)
 
 # Supplemental
 
-Figure S1: Phenology across the SRME study region
+Figure S1: Quaking Aspen Phenology
+
+Load the spatial block grid and phenology time-series summaries by spatial block for the Southern Rockies. Join the phenology summaries to their geometries.
+
+```{r}
+# Load the grids, keep the elevation attribute and TreeMap sum (aspen area)
+grid <- st_read('../../data/spatial/mod/boundaries/spatial_block_grid_50km2.gpkg',
+                quiet=T) %>%
+  select(grid_id,elevation_mn,treemap_sum,treemap_pct)
+
+# Load the phenology by spatial block grid
+phenology <- read_csv('../../data/tabular/mod/phenology/viirs_phenology_by_grid_in_aspen.csv',
+                      show_col_types = FALSE) %>%
+  rename(fid = `system:index`) %>%
+  mutate(grid_id = str_sub(fid, -7),
+         year = as.integer(str_sub(fid, 1, 4))) %>%
+  select(-c(fid,label,count,.geo)) %>%
+  # Create DOY versions of the phenology metrics for plotting and statistical analysis
+  mutate(
+    season_length = Growing_Season_Length_1_median,
+    doy_midgreenup = yday(Date_Mid_Greenup_Phase_1_median),
+    doy_midsenescence = yday(Date_Mid_Senescence_Phase_1_median),
+    doy_green_dec = yday(Onset_Greenness_Decrease_1_median),
+    doy_green_inc = yday(Onset_Greenness_Increase_1_median),
+    doy_green_max = yday(Onset_Greenness_Maximum_1_median),
+    doy_green_min = yday(Onset_Greenness_Minimum_1_median)
+  ) %>%
+  left_join(grid%>%as_tibble(), by="grid_id") %>%
+  select(grid_id,year,elevation_mn,season_length,doy_midgreenup,doy_midsenescence,
+         doy_green_dec,doy_green_inc,doy_green_max,doy_green_min)
+
+glimpse(phenology)
+```
+
+Spatial maps of the key phenology metrics.
+
+```{r fig.width=4, fig.height=5}
+
+# Calculate the median phenology metrics
+phenology.md <- phenology %>%
+  group_by(grid_id) %>%
+  summarise(across(starts_with("doy"), median, na.rm=T))
+
+# Join to the spatial data and pivot longer
+
+grid.l <- grid %>% 
+  left_join(phenology.md, by="grid_id") %>%
+    pivot_longer(cols = starts_with("doy"), names_to = "metric", values_to = "value") %>%
+  filter(treemap_pct > 0.05)
+
+# Tidy the names for plotting
+metric_names <- c(
+  doy_green_inc = "Onset Greenness Increase",
+  doy_midgreenup = "Mid Greenup Phase",
+  doy_green_max = "Onset Greenness Maximum",
+  doy_green_dec = "Onset Greenness Decrease",
+  doy_midsenescence = "Mid Senescence Phase",
+  doy_green_min = "Onset Greenness Minimum"
+)
+
+grid.l$metric <- factor(
+  grid.l$metric, 
+  levels = ordered_metrics, 
+  labels = metric_names
+)
+
+metrics <- unique(grid.l$metric)
+
+plots <- list()
+
+for (m in metrics){
+  gdf <- grid.l %>% filter(metric == m)
+  # Map
+  p <- ggplot() +
+    geom_sf(data=grid, fill=NA) +
+    geom_sf(data=gdf, aes(fill=value)) +
+    scale_fill_continuous(low = "lightgreen", high = "darkgreen",
+                          labels = function(x) format(as.Date(as.numeric(x), origin="1970-01-01"), "%b %d")) +
+    geom_sf(data=srme,fill=NA,color="black",size=2.5) +
+    labs(fill="", title=m) +
+    theme_void(12) +
+    theme(legend.position = "right",
+          legend.text = element_text(angle = 45, size=9),   # Ensure labels are not rotated
+          plot.title = element_text(hjust = 0.5, size=10)
+    ) + 
+    guides(fill = guide_colourbar(
+      barwidth = 0.5, 
+      barheight = 8, 
+      ticks = FALSE,
+      label.position = "right", 
+      label.theme = element_text(size = 8))
+    )
+  print(p)
+  plots[[m]] <- p
+}
+
+```
+
+Create a combined plot for four metrics.
+
+```{r fig.width=5, fig.height=5.5}
+fs1a <- ggarrange(plots[[1]], plots[[3]], plots[[2]], plots[[6]],
+                  ncol = 2, nrow = 2, widths=c(1,1), heights=c(1,1),
+                  align = "hv") + 
+  labs(tag="A")
+fs1a
+```
+
+
+Plot the relationship with elevation across metrics.
+
+```{r message=F, warning=F, fig.width=5.5, fig.height=4.5}
+
+(fs1c <- ggplot(data=grid.l, aes(x=value,y=elevation_mn)) +
+  geom_smooth(method="lm",colour="gray40", fill="gray70", size=0.8) +
+  geom_point(size=0.8) +
+  facet_wrap(~metric, scales="free_x") +
+  theme_light(12) +
+  theme(plot.title = element_text(size=10),
+        axis.text = element_text(size=8),
+        axis.title = element_text(size=10),
+        strip.text = element_text(size=8)) +
+  labs(x="Day of Year",y="Elevation", tag="B"))
+
+# Save out
+ggsave(fs1c, file="../../figures/FigureS1C_Phenology_by_Elevation.png", dpi=300)
+
+
+```
+
+Merge the two plots.
+
+```{r fig.width=5.5, fig.height=7.5}
+(fs1 <- ggarrange(fs1a, fs1c, nrow=2, ncol=1, widths = c(0.6, 1), heights = c(1, 0.7)))
+ggsave(fs1, file="../../figures/FigureS1_Phenology.png", dpi=300)
+```
+
+```{r}
+# Reshape from wide to long format
+phenology.l <- phenology %>%
+  pivot_longer(
+    cols = c(doy_midgreenup,doy_midsenescence,doy_green_dec,
+             doy_green_inc,doy_green_max,doy_green_min),
+    names_to = "metric",
+    values_to = "doy"
+  )
+
+ordered_metrics <- c(
+  "doy_green_inc","doy_midgreenup","doy_green_max",
+  "doy_green_dec","doy_midsenescence","doy_green_min") 
+
+metric_names <- c(
+  doy_green_inc = "Onset Greenness Increase",
+  doy_midgreenup = "Mid Greenup Phase",
+  doy_green_max = "Onset Greenness Maximum",
+  doy_green_dec = "Onset Greenness Decrease",
+  doy_midsenescence = "Mid Senescence Phase",
+  doy_green_min = "Onset Greenness Minimum"
+)
+
+phenology.l$metric <- factor(
+  phenology.l$metric, 
+  levels = ordered_metrics, 
+  labels = metric_names
+)
+
+# Create the plot with facet_wrap
+ggplot(phenology.l, aes(x=factor(year), y=doy)) +
+  geom_boxplot() +
+  facet_wrap(~ metric, scales = "fixed") +
+  theme_minimal() +
+  labs(title = "DOY Phenology Metrics (2013-2022)",
+       x = "Year",
+       y = "Day of Year",
+       fill = "Year") +
+  theme_light() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+# Stacked box plots
+ggplot(phenology.l, aes(x=factor(year), y=doy, fill=metric)) +
+  geom_boxplot(width=1) +
+  theme_minimal() +
+  labs(x = "Year",
+       y = "Day of Year",
+       fill = "Metric") +
+  theme_light() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "top")
+```
 
 ```{r}
 
