Updates to "frp-wrangle" and start for LANDFIRE EVT summary

--- a/Aim2/code/Python/fpa-fod.ipynb
+++ b/Aim2/code/Python/fpa-fod.ipynb
@@ -18,6 +18,16 @@
     "\"\"\"\n",
     "Fire occurrence data: FPA-FOD v6\n",
     "\n",
+    "General workflow:\n",
+    "\n",
+    "- Tidy the FPA-FOD ignitions data\n",
+    "- Extract the landcover composition within Xm buffer of ignition locations\n",
+    "- Assess the probability of ignition -> large fire growth based on landcover type\n",
+    "\n",
+    "Eventually:\n",
+    "\n",
+    "Extract variables from gridMET to account for extreme fire weather during the ignition\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "import os, time\n",
